
CHANGES IN FLTK 1.3.1

	- Fixed a potential crash if Fl_Double_Window::flush() was called
	  before show()
	- Fixed regression (in FLTK 1.3.0) that could clear a radio
	  button by using the keyboard (space or shortcut) (STR #2748)
	- Fixed fl_pie() drawing too small on X11 (STR #2703)
	- Fixed Fl_Menu issue with unusual menu flags (STR #2680)
	- Fixed Windows DLL import of fl_xid() (STR #2670)
	- Added Fl::screen_work_area() functions that compute the work area
	of a screen. These functions improve the positioning of menus.
	Changed Fl::x(), Fl::y(), Fl::w(), Fl::h() functions
	to return the origin and size of the work area of the main screen
	(STR #2695 + 2697)
	- Created the FL_SCREEN_CONFIGURATION_CHANGED event that is triggered
	when a screen is added, removed, moved or when resolution is changed
	(STR #2600)
	- Improved the description of page size and orientation by 
	Fl_PostScript_File_Device.

CHANGES IN FLTK 1.3.0

	  New Features

	- Added UTF-8 Unicode support throughout FLTK and Fluid
	- Added Fl_Tree widget for hierarchical views
	- Added Fl_Table widget for widget layout
	- Added Fl_Native_Filechooser as a widget and global options
	- Added printing support (Fl_Printer class and friends) for native
	  printing on Windows and Mac OS X, PostScript printing on X11
	  with CUPS or lp, and PostScript file output on all platforms
	- Added basic Fl_Device abstraction layer for all drawing functions
	- Moved OS X code base to the more modern Cocoa toolkit thanks
	  to the awesome work of Manolo Gouy (STR #2221)

	  API and ABI compatibility to FLTK 1.1.x

	- All strings are expected to be in UTF-8 Unicode encoding
	- Replaced Fl_Scroll::position(int,int) with scroll_to(int,int)
	  to avoid overriding Fl_Widget::position(int,int) (STR #1303)
	- Although FLTK 1.3 maintains source code compatibility as good
	  as possible, the binary interface changed considerably.
	- Updated the bundled libpng to v1.5.1 (released Feb  3, 2011)